prevent callouts from breaking on mobile
There was some rogue CSS causing Foundation's callouts to not wrap text as the page width decreased to mobile size.  This commit should fix that.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -498,9 +498,9 @@ header img{
 	width: 800px;
 }
 
-#main-content p{
+/*#main-content p{
 	width: 690px;
-}
+}*/
 
 #main-content img {
   max-width: 100%;
